--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
             
-        [AQUI ENTRA UMA FOTO]
+        <img src="_imagens/glass-oculos-preto-peq.png"/>
 
         Menu Principal
         - Home
