Códigos de Cores em HTML5 e CSS3

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <meta charset="utf-8"/>
         
         <style>
+            body{
+                background-color: hsla(165, 81%, 93%, 0.5);
+                color: rgba(0, 0, 0, 1);
+            }
+            
             p{
                 text-align: justify;
                 text-indent: 50px;
