Introdução ao JavaScript

--- a/testejs01.html
+++ b/testejs01.html
@@ -10,8 +10,7 @@
         <h1>testando JavaScript</h1>
         
         <script>
-            alert("olá, mundo!");
-            document.write("Olá, mundo!");
+            document.write("Olá, mundo! Hoje é dia "+Date());
         </script>
     </body>
 </html>
