--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
         <meta charset="utf-8"/>
         <link rel="shortcut icon" href="_imagens/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
-        
-        <script>
-            function mudaFoto(foto){
-                document.getElementById("icone").src = foto;
-            }
-        </script>
+        <script language="javascript" src="_javascript/funcoes.js"></script>
     </head>
     
     <body>
