Add css e javascript a pagina fale-conosco.html

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -1,19 +1,35 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
 
-[AQUI ENTRA UMA FOTO]
+<html lang="pt-br">
+    <head>
+        <title>Tudo sobre Google Glass</title>
+        <meta charset="utf-8"/>
+        <link rel="shortcut icon" href="_imagens/favicon.ico"/>
+        <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+        <script language="javascript" src="_javascript/funcoes.js"></script>
+    </head>
+    
+    <body>
+        <div id="interface">
+            <header id="cabecalho">
+                <hgroup>
+                    <h1>Google Glass</h1>
+                    <h2>A revolução do Google está chegando</h2>
+                </hgroup>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+                <img id="icone" src="_imagens/contato.png"/>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+                <nav id="menu">
+                    <h1>Menu Principal</h1>
+                        <ul>
+                            <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html">Home</a></li>
+                            <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="specs.html">Especificações</a></li>
+                            <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fotos.html">Fotos</a></li>
+                            <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="multimidia.html">Multimídia</a></li>
+                            <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                        </ul>
+                </nav>
+            </header>
 
 Identificação do Usuário
     Nome:
@@ -43,5 +59,10 @@ Quero um Google Glass
 
 [BOTÃO ENVIAR]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+            <footer id="rodape">
+                <p>Copyright&copy; 2019 - by Stefano Paulo <br/>
+                <a href="https://github.com/stefanopaulo" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/stefano-paulo-de-souza-ab810814a/" target="_blank">Linkedin</a></p>
+            </footer>
+        </div>
+    </body>
+</html>
