exercicios basicos de javascript

--- a/javascript-basico/testejs03.html
+++ b/javascript-basico/testejs03.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Teste JavaScript</title>
-        <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="shortcut icon" href="_imagens/favicon.ico"/>
         
         <script>
             var quebrada = false;
