--- a/javascript-basico/testejs01.html
+++ b/javascript-basico/testejs01.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>teste JavaScript</title>
+        <link rel="shortcut icon" href="_imagens/favicon.ico"/>
     </head>
     
     <body>
