--- a/javascript-basico/testejs02.html
+++ b/javascript-basico/testejs02.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Teste JavaScript</title>
+        <link rel="shortcut icon" href="_imagens/favicon.ico"/>
         
         <script>
             function acendeLampada(){
