escondendo o scroll do iframe

--- a/specs.html
+++ b/specs.html
@@ -49,7 +49,7 @@
                     
                     <section id="conteudo">
                         <img src="_imagens/glass-esquema-marcado.jpg"/>
-                        <iframe name="janela" id="frame-spec" src="google-glass.html"></iframe>
+                        <iframe name="janela" id="frame-spec" src="google-glass.html" scrolling="no"></iframe>
                     </section>
                 </article>
             </section>
