add pasta de midias

--- a/multimidia.html
+++ b/multimidia.html
@@ -30,9 +30,19 @@
                         </ul>
                 </nav>
             </header>
+            
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
+                        <hgroup>
+                            <h3>Glass > Especificações</h3>
+                            <h1>Raio-X no Google Glass</h1>
+                            <h2>por Stefano Paulo</h2>
+                            <h3 class="direita">Atualizado em 08/Fevereiro/2019</h3>
+                        </hgroup>
+                    </header>
 
-
-Áudio e Vídeo
+<p>Áudio e Vídeo</p>
 
 [AQUI ENTRA UM VÍDEO]
 [AQUI ENTRA UM ÁUDIO]
@@ -41,6 +51,9 @@
                 <p>Copyright&copy; 2019 - by Stefano Paulo <br/>
                 <a href="https://github.com/stefanopaulo" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/stefano-paulo-de-souza-ab810814a/" target="_blank">Linkedin</a></p>
             </footer>
+                    
+                </article>
+            </section>
         </div>
     </body>
 </html>
