--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -8,6 +8,13 @@
         <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
         <link rel="stylesheet" href="_css/form.css"/>
         <script language="javascript" src="_javascript/funcoes.js"></script>
+        <script>
+            function calc_total(){
+                var qtd = parseInt(document.getElementById('cQtd').value);
+                var tot = qtd*1500;
+                document.getElementById('cTot').value = tot;
+            }
+        </script>
     </head>
     
     <body>
@@ -43,7 +50,7 @@
                         </hgroup>
                     </header>
 
-            <form method="post" id="fContato" action="destino.php">
+            <form method="post" id="fContato" action="destino.php" oninput="calc_total();">
                 <fieldset id="usuario">
                     <legend>
                     Identificação do Usuário
@@ -97,7 +104,7 @@
                         </p>
                         <p>
                             <label for="cMsg">Mensagem:</label>
-                            <textarea name="tMsg" id="cMsg" cols="45" rows="5" placeholder="Deixe sua mensagem aqui"></textarea>
+                            <textarea name="tMsg" id="cMsg" cols="35" rows="5" placeholder="Deixe sua mensagem aqui"></textarea>
                         </p>
                 </fieldset>
 
@@ -105,13 +112,13 @@
                     <legend>
                     Quero um Google Glass
                     </legend>
-                        <p><label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label></p>
-                        <p><label for="cCor">Cor:</label></p>
-                        <p><label for="cQtd">Quantidade:</label></p>
-                        <p><label for="cTot">Preço Total: R$</label></p>
+                        <p><input type="checkbox" name="tPed" id="cPed" checked/> <label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label></p>
+                        <p><label for="cCor">Cor:</label><input type="color" name="tCor" id="cCor" value="#ffff00"/> </p>
+                        <p><label for="cQtd">Quantidade:</label><input type="number" name="iQtd" id="cQtd" min="0" max="5" value="0"/></p>
+                        <p><label for="cTot">Preço Total: R$</label><input type="text" name="tTot" id="cTot" placeholder="Total a pagar" readonly/></p>
                 </fieldset>
 
-                <img src="_imagens/botao-enviar.png"/>
+                <input type="image" src="_imagens/botao-enviar.png" name="tEnviar" id="cEnviar"/>
             </form>
 
             <footer id="rodape">
